Added Upload Image button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,49 +10,74 @@
         android:id="@+id/UserInputText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="99dp"
-        android:layout_marginBottom="136dp"
+        android:layout_marginBottom="22dp"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:text="Your Message"
+        android:text="Type Your Message"
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/MorseCode"
+        app:layout_constraintBottom_toTopOf="@+id/or"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
 
     <Button
         android:id="@+id/TranslateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginBottom="408dp"
         android:text="Translate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/UserInputText" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/UploadButton"
+        app:layout_constraintTop_toBottomOf="@+id/UploadButton" />
 
     <TextView
         android:id="@+id/MorseCode"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="432dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
         android:gravity="center"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/UserInputText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/UserInputText" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/FlashButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="85dp"
         android:text="Flash it!"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/or"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="or"
+        app:layout_constraintBottom_toTopOf="@+id/UploadButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
+        app:layout_constraintTop_toBottomOf="@+id/UserInputText" />
+
+    <Button
+        android:id="@+id/UploadButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="32dp"
+        android:text="Upload an Image"
+        app:layout_constraintBottom_toTopOf="@+id/TranslateButton"
+        app:layout_constraintEnd_toEndOf="@+id/UserInputText"
+        app:layout_constraintTop_toBottomOf="@+id/or" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
