--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,10 +39,12 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="598dp"
         android:gravity="center"
+        android:lineSpacingExtra="8sp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/UserInputText"
+        android:textSize="20"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -79,5 +81,16 @@
         app:layout_constraintBottom_toTopOf="@+id/TranslateButton"
         app:layout_constraintEnd_toEndOf="@+id/UserInputText"
         app:layout_constraintTop_toBottomOf="@+id/or" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginBottom="20dp"
+        android:text="Home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
