--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
 
     <!-- for light mode -->
-    <color name="backgroundColor">#FCFCFC</color>
-    <color name="textColor">#999999</color>
+    <color name="backgroundColor">#212121</color>
+    <color name="textColor">#FFFFFF</color>
 </resources>
