--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,13 +56,12 @@
         app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="386dp"
-        />
+        tools:layout_editor_absoluteX="288dp"
+        tools:layout_editor_absoluteY="331dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
