--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/or" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnToggleDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
