--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:textColor="@color/textColor"
         app:layout_constraintBottom_toTopOf="@+id/or"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
 
@@ -26,12 +27,12 @@
         android:id="@+id/TranslateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginBottom="408dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginBottom="240dp"
         android:text="Translate"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnToggleDark"
         app:layout_constraintStart_toStartOf="@+id/UploadButton"
-        app:layout_constraintTop_toBottomOf="@+id/UploadButton" />
+        app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
 
     <TextView
         android:id="@+id/MorseCode"
@@ -40,13 +41,13 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="598dp"
+        android:layout_marginBottom="307dp"
         android:gravity="center"
         android:lineSpacingExtra="8sp"
         android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/TranslateButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -67,8 +68,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/textColor"
         android:text="or"
+        android:textColor="@color/textColor"
         app:layout_constraintBottom_toTopOf="@+id/UploadButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
         android:id="@+id/UploadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="31dp"
+        android:layout_marginEnd="28dp"
         android:layout_marginBottom="32dp"
         android:text="Upload an Image"
         app:layout_constraintBottom_toTopOf="@+id/TranslateButton"
@@ -93,7 +94,9 @@
         android:text="Dark Mode"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MorseCode" />
+        app:layout_constraintTop_toBottomOf="@+id/TranslateButton"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
