--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <!-- for light mode -->
+    <!-- for dark mode -->
     <color name="backgroundColor">#212121</color>
     <color name="textColor">#FFFFFF</color>
 </resources>
